[package]
name = "rust_svelte_cookie_clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
mobc = "0.7.3"
mobc-postgres = { version = "0.7.0", features = ["with-chrono-0_4"] }
serde = {version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio =  { version = "1.23", features = ["macros", "rt-multi-thread"] }
warp = "0.3.3"
